--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -128,7 +128,7 @@ a {
     }
 
     & li:has(> input[type="checkbox"]:checked) {
-      text-decoration: line-through;
+      text-decoration: none;
       text-decoration-color: var(--gray);
       color: var(--gray);
     }
