Quartz sync: Apr 1, 2024, 12:49 AM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -43,7 +43,7 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
-  overflow-wrap: anywhere;
+  overflow-wrap: none; // davor anywhere
   hyphens: auto;
 }
 
