Quartz sync: Apr 1, 2024, 1:03 AM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -59,9 +59,10 @@ altes
   overflow-wrap: normal;
   white-space: nowrap;
   hyphens: none;
-
+  overflow-x: auto;
   &.math-display {
     text-align: center;
+    overflow-x: auto;
   }
 }
 
