Quartz sync: Apr 1, 2024, 1:09 AM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -43,24 +43,18 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
+  overflow-wrap: anywhere;
   hyphens: auto;
 }
 
-/* .math {
+.math {
   &.math-display {
     text-align: center;
+    word-break: normal;
+    white-space: nowrap;
+    overflow-x: auto;
   }
-} 
-altes
-*/
-
-.math {
-  overflow-wrap: normal !important;
-  white-space: nowrap !important;
-  hyphens: none !important;
-  overflow-x: auto !important;
 }
-
 
 strong {
   font-weight: $semiBoldWeight;
