Quartz sync: Jul 1, 2024, 5:38 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -334,7 +334,7 @@ html[saved-theme="dark"] #disqus_thread {
 }
 
 .arrows path {
-  stroke: #F2E6C6;
+  stroke: #f2e6c6;
   fill: transparent;
   stroke-width: 1.5px;
 }
