Quartz sync: Jul 3, 2024, 1:50 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -289,7 +289,7 @@ html[saved-theme="dark"] .text {
 
 /* Disqus DARK*/
 #disqus_thread {
-  background-color: #005d73;
+  background-color: #faf8f8;
   padding: 25px;
   border-radius: 25px;
 }
